fix navigation overflow

--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -1,4 +1,8 @@
 .navbar {
+  &-wrapper {
+    overflow: hidden;
+  }
+
   display: flex;
   align-items: center;
   gap: 2rem;
