--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -2,5 +2,4 @@
   width: min(100%, 1440px);
   margin-inline: auto;
   padding: 40px 25px;
-  overflow-x: hidden;
 }
